change of links

--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="/components/headerStyle.css" />
     <link rel="stylesheet" href="/style.css" />
     <link rel="stylesheet" href="/main.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -34,14 +33,14 @@
             <div class="homePageButton">
               <div class="HostButton">BECOME A HOST</div>
               <div class="HomePagePlayIcon">
-                <img src="/assets/play-icon.png" alt="" />
+                <img src="/src/assets/play-icon.png" alt="" />
               </div>
             </div>
           </div>
         </div>
         <div class="homePageSecond">
-          <!-- <img src="/src/assets/HomePageFadeCarLogo.png" class="FadeLogo"> -->
-          <img src="/assets/redCar.png" alt="redCar" />
+          <!-- <img src="/srcsrc/assets/HomePageFadeCarLogo.png" class="FadeLogo"> -->
+          <img src="src/assets/redCar.png" alt="redCar" />
         </div>
 
         <div class="searchBar"></div>
@@ -70,7 +69,7 @@
           </div>
           <button class="search-button">
             <img
-              src="/assets/hedarSearch-removebg-preview.png"
+              src="src/assets/hedarSearch-removebg-preview.png"
               alt="Search Icon"
             />
           </button>
@@ -94,38 +93,38 @@
             <span>SEATAC RENT</span>
             <h6>TESLA</h6>
           </div>
-          <img src="/assets/tesla.png" alt="Teslacarimg" />
+          <img src="src/assets/tesla.png" alt="Teslacarimg" />
         </div>
         <div class="SectionBrowseSecond grid-item">
           <div class="volswagenheading">
             <span>SEATAC RENT</span>
             <h6>VOLKSWAGEN</h6>
-            <img src="/assets/volvo.png" alt="volswagenacarcarimg" />
+            <img src="src/assets/volvo.png" alt="volswagenacarcarimg" />
           </div>
         </div>
         <div class="SectionbrowseThird grid-item">
           <div class="porseHeading">
             <span>SEATAC RENT</span>
             <h6>PORSCHE</h6>
-            <img src="/assets/porshe.png" alt="Porsecarimg" />
+            <img src="src/assets/porshe.png" alt="Porsecarimg" />
           </div>
         </div>
       </div>
 
       <div class="SectionArrow">
-        <img src="/assets/Arrrow.png" alt="arrowimg" />
+        <img src="src/assets/Arrrow.png" alt="arrowimg" />
       </div>
     </div>
 
     <div class="occasion">
       <div class="Occasionfirst">
-        <img src="/assets/occasionfirst.png.jpeg" alt="" />
+        <img src="src/assets/occasionfirst.png.jpeg" alt="" />
       </div>
 
       <div class="OccasionSecond">
         <img
           class="OccasionSecondheading"
-          src="/assets/Occasionheading.png.jpeg"
+          src="src/assets/Occasionheading.png.jpeg"
           alt=""
         />
         <div class="OccasionSecondtext">
@@ -142,7 +141,7 @@
         </div>
         <img
           class="Occasionbutton"
-          src="/assets/Occasionbutton.png.jpeg"
+          src="src/assets/Occasionbutton.png.jpeg"
           alt=""
         />
       </div>
@@ -156,18 +155,18 @@
 
       <div class="CircleDestination">
         <div class="CircleDestinationFirst">
-          <img src="/assets/destinationOne.png.jpeg" alt="" />
+          <img src="src/assets/destinationOne.png.jpeg" alt="" />
           <span>Seatac rent</span>
           <h4>Bristol</h4>
         </div>
         <div class="CircleDestinationSecond">
-          <img src="/assets/destinationSecond.png.jpeg" alt="" />
+          <img src="src/assets/destinationSecond.png.jpeg" alt="" />
           <span>Seatac rent</span>
           <h4>Los Angeles</h4>
         </div>
 
         <div class="CircleDestinationThrid">
-          <img src="/assets/destinationthree.png.jpeg" alt="" />
+          <img src="src/assets/destinationthree.png.jpeg" alt="" />
           <span>Seatac rent</span>
           <h4>Las Vegas</h4>
         </div>
@@ -184,7 +183,7 @@
       </div>
       <div class="three-images">
         <div class="daydream-section-card">
-          <img src="/assets/image0.png" alt="" />
+          <img src="src/assets/image0.png" alt="" />
 
           <div class="small-text">
             <p>Featured blog</p>
@@ -199,7 +198,7 @@
           </div>
         </div>
         <div class="daydream-section-card">
-          <img src="/assets/image.png" alt="" />
+          <img src="src/assets/image.png" alt="" />
 
           <div class="small-text">
             <p>Featured blog</p>
@@ -214,7 +213,7 @@
           </div>
         </div>
         <div class="daydream-section-card">
-          <img src="/assets/image1.png" alt="" />
+          <img src="src/assets/image1.png" alt="" />
           <div class="small-text">
             <p>Featured blog</p>
           </div>
@@ -229,7 +228,7 @@
         </div>
       </div>
       <div class="daydream-section-car-display">
-        <img src="/assets/sport_car_107_15701 1.png" alt="" />
+        <img src="src/assets/sport_car_107_15701 1.png" alt="" />
       </div>
     </div>
     <div class="section-5">
@@ -241,19 +240,19 @@
           <h2 class="text-6xl font-bold">recent rental reviews</h2>
         </div>
       </div>
-      <div class="review"><img src="/assets/dfdf 1.png" alt="" /></div>
+      <div class="review"><img src="src/assets/dfdf 1.png" alt="" /></div>
       <div class="partners-logo">
-        <img src="/assets/css 1.png" alt="" />
+        <img src="src/assets/css 1.png" alt="" />
       </div>
     </div>
 
     <div class="footerparent">
       <div class="footer-col logo-col">
-        <img src="/assets/seatac_footer_logo.png" alt="Seatac Logo" />
+        <img src="src/assets/seatac_footer_logo.png" alt="Seatac Logo" />
         <div class="iconImg">
-          <img src="/assets/footertwi.png" alt="Twitter" />
-          <img src="/assets/footerlind.png" alt="LinkedIn" />
-          <img src="/assets/footerinsta.png" alt="Instagram" />
+          <img src="src/assets/footertwi.png" alt="Twitter" />
+          <img src="src/assets/footerlind.png" alt="LinkedIn" />
+          <img src="src/assets/footerinsta.png" alt="Instagram" />
         </div>
       </div>
 
