change in index file in first section of home pages and

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 
     <!-- home page langing page 1 -->
 
-    <div class="main">
+      <div class="main">
       <div class="homePageMain">
-        <div class="homepageFirst">
+        <div class="homepageFirst bg-red-200">
           <div class="HomePageParentdiv">
             <div class="homepageFirstText">Need to Rent</div>
             <div class="homePageSecondText">
@@ -36,7 +36,6 @@
                 <img src="/src/assets/play-icon.png" alt="" />
               </div>
             </div>
-          </div>
         </div>
         <div class="homePageSecond">
           <!-- <img src="/srcsrc/assets/HomePageFadeCarLogo.png" class="FadeLogo"> -->
@@ -53,7 +52,7 @@
               placeholder="City, airport, address "
             />
           </div>
-           <div class="searchline"><img src="./dist/assets/Line 1.png" alt=""></div>
+           <div class="searchline">h<img src="./dist/assets/" alt=""></div>
           <div class="input-groupp">
             <label for="from">From</label>
             <input placeholder="14/12/24       10:00" type="" id="from" value="" />
@@ -78,6 +77,7 @@
           </button>
         </div>
       </div>
+    </div>
     </div>
 
     <!-- home page langing page 1 -->
