--- a/index.html
+++ b/index.html
@@ -1,263 +1,280 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="/main.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=account_circle"
+    />
+    <title>CarRentalWebsite</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <link rel="stylesheet" href="/style.css" />
-  <link rel="stylesheet" href="/main.css" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet"
-    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=account_circle" />
-  <title>CarRentalWebsite</title>
-</head>
+  <body>
+    <div id="header"></div>
 
-<body>
-  <div id="header"></div>
+    <!-- home page langing page 1 -->
+    <div class="py-8 bg-[url('/src/assets/homebbgfinal.png')] bg-cover px-40">
+      <div class="relative h-[580px]">
+        <div class="w-1/2 h-full flex flex-col justify-center gap-3">
+          <div
+            class="flex text-gray-700 font-seatac font-poppins items-center text-2xl relative"
+          >
+            Need to Rent
+            <img
+              class="absolute right-4 top-1/2 w-[70%] -translate-y-1/2"
+              src="./src/assets/homefadecar.png"
+              alt=""
+            />
+          </div>
 
-
-  <!-- home page langing page 1 -->
-  <div class="py-8 bg-[url('/src/assets/homebbgfinal.png')] bg-cover px-40 ">
-    <div class="relative h-[600px] lg:h-[600px]">
-      <div class=" w-1/2 h-full flex flex-col justify-center gap-5 ">
-
-        <div class="flex text-gray-700 font-seatac font-poppins items-center text-3xl relative">
-          Need to Rent
-          <img class="absolute right-4 top-1/2 -translate-y-1/2" src="./src/assets/homefadecar.png" alt="" />
+          <div
+            class="font-seatac text-4xl font-bold text-emerald-500 leading-[48px]"
+          >
+            Luxury Car? <br />
+            Send A Request
+          </div>
+          <div class="font-poppins text-base font-normal w-3/4">
+            Pellentesque habitant morbi tristique senectus et netus et
+            malesuada.
+          </div>
+          <div class="flex gap-1">
+            <button class="w-44">BECOME A HOST</button>
+            <img src="/src/assets/play-icon.png" alt="playicon" />
+          </div>
         </div>
-
-        <div class="font-seatac text-[44px] font-bold text-emerald-500 leading-[56px]">Luxury Car? <br>
-          Send A Request</div>
-        <div class="font-poppins text-base font-normal">Pellentesque habitant morbi tristique senectus et <br>netus et
-          malesuada.</div>
-        <div class="flex gap-1"> <button class="w-44">BECOME A HOST</button>
-          <img src="/src/assets/play-icon.png" alt="playicon">
-        </div>
-      </div>
-      <img class="absolute -right-16 scale-90 mt-8 top-1/2 -translate-y-1/2" src="src/assets/redCar.png" alt="" />
-    </div>
-  </div>
-
-
-
-  <div class="" id="search-bar">
-    
-  </div>
-  </div>
-  </div>
-  </div>
-
-  <!-- home page langing page 1 -->
-
-  <!-- browse my make -->
-
-  <div class="SectionBrowse">
-    <div class="SectionBrowseHeading">
-      <div class="staticrent">SEATAC RENT</div>
-      <div class="SectionBrowseHeadingBrowse">BROWSE BY MAKE</div>
-    </div>
-
-    <div class="SectionBrowseParentCar">
-      <div class="SectionBrowseFirst grid-item">
-        <div class="teslaHeading">
-          <span>SEATAC RENT</span>
-          <h6>TESLA</h6>
-        </div>
-        <img src="src/assets/tesla.png" alt="Teslacarimg" />
-      </div>
-      <div class="SectionBrowseSecond grid-item">
-        <div class="volswagenheading">
-          <span>SEATAC RENT</span>
-          <h6>VOLKSWAGEN</h6>
-          <img src="src/assets/volvo.png" alt="volswagenacarcarimg" />
-        </div>
-      </div>
-      <div class="SectionbrowseThird grid-item">
-        <div class="porseHeading">
-          <span>SEATAC RENT</span>
-          <h6>PORSCHE</h6>
-          <img src="src/assets/porshe.png" alt="Porsecarimg" />
-        </div>
+        <img
+          class="w-3/4 absolute -right-16 top-1/2 -translate-y-1/2"
+          src="src/assets/redCar.png"
+          alt=""
+        />
+        <div
+          class="absolute bottom-12 w-4/5 left-1/2 -translate-x-1/2"
+          id="search-bar"
+        ></div>
       </div>
     </div>
-    <div class="SectionArrow">
-      <img src="src/assets/Arrrow.png" alt="arrowimg" />
-    </div>
-  </div>
 
-  <div class="occasion">
-    <div class="Occasionfirst">
-      <img src="src/assets/occasionfirst.png.jpeg" alt="" />
+    <!-- home page langing page 1 -->
+
+    <!-- browse my make -->
+
+    <div class="SectionBrowse">
+      <div class="SectionBrowseHeading">
+        <div class="staticrent">SEATAC RENT</div>
+        <div class="SectionBrowseHeadingBrowse">BROWSE BY MAKE</div>
+      </div>
+
+      <div class="SectionBrowseParentCar">
+        <div class="SectionBrowseFirst grid-item">
+          <div class="teslaHeading">
+            <span>SEATAC RENT</span>
+            <h6>TESLA</h6>
+          </div>
+          <img src="src/assets/tesla.png" alt="Teslacarimg" />
+        </div>
+        <div class="SectionBrowseSecond grid-item">
+          <div class="volswagenheading">
+            <span>SEATAC RENT</span>
+            <h6>VOLKSWAGEN</h6>
+            <img src="src/assets/volvo.png" alt="volswagenacarcarimg" />
+          </div>
+        </div>
+        <div class="SectionbrowseThird grid-item">
+          <div class="porseHeading">
+            <span>SEATAC RENT</span>
+            <h6>PORSCHE</h6>
+            <img src="src/assets/porshe.png" alt="Porsecarimg" />
+          </div>
+        </div>
+      </div>
+      <div class="SectionArrow">
+        <img src="src/assets/Arrrow.png" alt="arrowimg" />
+      </div>
     </div>
 
-    <div class="OccasionSecond">
+    <div class="occasion">
+      <div class="Occasionfirst">
+        <img src="src/assets/occasionfirst.png.jpeg" alt="" />
+      </div>
+
+      <div class="OccasionSecond">
+        <div class="destinationHeading">
+          <span class="font-medium">RENT CARS FOR </span>
+          <h2 class="font-extrabold">ANY OCASSION</h2>
+        </div>
+        <div class="OccasionSecondtext">
+          Donec in libero pellentesque mauris blandit aliquet in ut turpis.
+          Vestibulum ut purus at velit finibus hendrerit. Mauris venenatis,
+          ligula vitae sollicitudin commodo, urna risus luctus ligula, in congue
+          mi dolor a tortor. Cras rhoncus molestie placerat. Maecenas faucibus
+          justo elit, varius aliquam turpis congue et. Donec eget velit eu nisi
+          sagittis mollis. Praesent fringilla nibh nibh, eget ultrices purus
+          semper eget. Suspendisse aliquam massa arcu, vitae mattis orci porta
+          vitae. Cras gravida mi ac quam venenatis egestas. Maecenas mattis
+          maximus nunc, id laoreet neque facilisis vitae. Ut lobortis purus
+          ultrices, consectetur magna vel, bibendum enim. 
+        </div>
+        <img
+          class="Occasionbutton"
+          src="src/assets/Occasionbutton.png.jpeg"
+          alt=""
+        />
+      </div>
+    </div>
+
+    <div class="Destination">
       <div class="destinationHeading">
-        <span class="font-medium">RENT CARS FOR </span>
-        <h2 class="font-extrabold">ANY OCASSION</h2>
-      </div>
-      <div class="OccasionSecondtext">
-        Donec in libero pellentesque mauris blandit aliquet in ut turpis.
-        Vestibulum ut purus at velit finibus hendrerit. Mauris venenatis,
-        ligula vitae sollicitudin commodo, urna risus luctus ligula, in congue
-        mi dolor a tortor. Cras rhoncus molestie placerat. Maecenas faucibus
-        justo elit, varius aliquam turpis congue et. Donec eget velit eu nisi
-        sagittis mollis. Praesent fringilla nibh nibh, eget ultrices purus
-        semper eget. Suspendisse aliquam massa arcu, vitae mattis orci porta
-        vitae. Cras gravida mi ac quam venenatis egestas. Maecenas mattis
-        maximus nunc, id laoreet neque facilisis vitae. Ut lobortis purus
-        ultrices, consectetur magna vel, bibendum enim. 
-      </div>
-      <img class="Occasionbutton" src="src/assets/Occasionbutton.png.jpeg" alt="" />
-    </div>
-  </div>
-
-  <div class="Destination">
-    <div class="destinationHeading">
-      <span>BROWSE BY</span>
-      <h2>DESTINATION</h2>
-    </div>
-
-    <div class="CircleDestination">
-      <div class="CircleDestinationFirst">
-        <img src="src/assets/destinationOne.png.jpeg" alt="" />
-        <span>Seatac rent</span>
-        <h4>Bristol</h4>
-      </div>
-      <div class="CircleDestinationSecond">
-        <img src="src/assets/destinationSecond.png.jpeg" alt="" />
-        <span>Seatac rent</span>
-        <h4>Los Angeles</h4>
+        <span>BROWSE BY</span>
+        <h2>DESTINATION</h2>
       </div>
 
-      <div class="CircleDestinationThrid">
-        <img src="src/assets/destinationthree.png.jpeg" alt="" />
-        <span>Seatac rent</span>
-        <h4>Las Vegas</h4>
-      </div>
-    </div>
-  </div>
-  <div class="daydreams-section">
-    <div>
-      <div class="top-para">
-        <p>Seatac rent</p>
-      </div>
-      <div class="heading-top">
-        <h2 class="text-6xl font-bold">Fuel your daydreams</h2>
-      </div>
-    </div>
-    <div class="three-images">
-      <div class="daydream-section-card">
-        <img src="src/assets/image0.png" alt="" />
-
-        <div class="small-text">
-          <p>Featured blog</p>
+      <div class="CircleDestination">
+        <div class="CircleDestinationFirst">
+          <img src="src/assets/destinationOne.png.jpeg" alt="" />
+          <span>Seatac rent</span>
+          <h4>Bristol</h4>
+        </div>
+        <div class="CircleDestinationSecond">
+          <img src="src/assets/destinationSecond.png.jpeg" alt="" />
+          <span>Seatac rent</span>
+          <h4>Los Angeles</h4>
         </div>
 
-        <div class="lower-heading">
-          <h2>Duis rutrum pharetra mauris.</h2>
-        </div>
-
-        <div class="read-more">
-          <button>READ MORE</button>
-        </div>
-      </div>
-      <div class="daydream-section-card">
-        <img src="src/assets/image.png" alt="" />
-
-        <div class="small-text">
-          <p>Featured blog</p>
-        </div>
-
-        <div class="lower-heading">
-          <h2>Duis rutrum pharetra mauris.</h2>
-        </div>
-
-        <div class="read-more">
-          <button>READ MORE</button>
-        </div>
-      </div>
-      <div class="daydream-section-card">
-        <img src="src/assets/image1.png" alt="" />
-        <div class="small-text">
-          <p>Featured blog</p>
-        </div>
-
-        <div class="lower-heading">
-          <h2>Duis rutrum pharetra mauris.</h2>
-        </div>
-
-        <div class="read-more">
-          <button>READ MORE</button>
+        <div class="CircleDestinationThrid">
+          <img src="src/assets/destinationthree.png.jpeg" alt="" />
+          <span>Seatac rent</span>
+          <h4>Las Vegas</h4>
         </div>
       </div>
     </div>
-    <div class="daydream-section-car-display">
-      <img src="src/assets/sport_car_107_15701 1.png" alt="" />
-    </div>
-  </div>
-  <div class="section-5">
-    <div class="recent-rental-reviews">
-      <div class="top-para">
-        <p>Seatac rent</p>
+    <div class="daydreams-section">
+      <div>
+        <div class="top-para">
+          <p>Seatac rent</p>
+        </div>
+        <div class="heading-top">
+          <h2 class="text-6xl font-bold">Fuel your daydreams</h2>
+        </div>
       </div>
-      <div class="heading-top">
-        <h2 class="text-6xl font-bold">recent rental reviews</h2>
+      <div class="three-images">
+        <div class="daydream-section-card">
+          <img src="src/assets/image0.png" alt="" />
+
+          <div class="small-text">
+            <p>Featured blog</p>
+          </div>
+
+          <div class="lower-heading">
+            <h2>Duis rutrum pharetra mauris.</h2>
+          </div>
+
+          <div class="read-more">
+            <button>READ MORE</button>
+          </div>
+        </div>
+        <div class="daydream-section-card">
+          <img src="src/assets/image.png" alt="" />
+
+          <div class="small-text">
+            <p>Featured blog</p>
+          </div>
+
+          <div class="lower-heading">
+            <h2>Duis rutrum pharetra mauris.</h2>
+          </div>
+
+          <div class="read-more">
+            <button>READ MORE</button>
+          </div>
+        </div>
+        <div class="daydream-section-card">
+          <img src="src/assets/image1.png" alt="" />
+          <div class="small-text">
+            <p>Featured blog</p>
+          </div>
+
+          <div class="lower-heading">
+            <h2>Duis rutrum pharetra mauris.</h2>
+          </div>
+
+          <div class="read-more">
+            <button>READ MORE</button>
+          </div>
+        </div>
+      </div>
+      <div class="daydream-section-car-display">
+        <img src="src/assets/sport_car_107_15701 1.png" alt="" />
       </div>
     </div>
-    <div class="review"><img src="src/assets/dfdf 1.png" alt="" /></div>
-    <div class="partners-logo">
-      <img src="src/assets/css 1.png" alt="" />
-    </div>
-  </div>
-
-  <div class="footerparent">
-    <div class="footer-col logo-col">
-      <img src="src/assets/seatac_footer_logo.png" alt="Seatac Logo" />
-      <div class="iconImg">
-        <img src="src/assets/footertwi.png" alt="Twitter" />
-        <img src="src/assets/footerlind.png" alt="LinkedIn" />
-        <img src="src/assets/footerinsta.png" alt="Instagram" />
+    <div class="section-5">
+      <div class="recent-rental-reviews">
+        <div class="top-para">
+          <p>Seatac rent</p>
+        </div>
+        <div class="heading-top">
+          <h2 class="text-6xl font-bold">recent rental reviews</h2>
+        </div>
+      </div>
+      <div class="review"><img src="src/assets/dfdf 1.png" alt="" /></div>
+      <div class="partners-logo">
+        <img src="src/assets/css 1.png" alt="" />
       </div>
     </div>
 
-    <div class="footer-col">
-      <h4>Quick Links</h4>
-      <br />
-      <ul class="links">
-        <li><a href="#">Home</a></li>
-        <li><a href="#">About Us</a></li>
-        <li><a href="#">Our Services</a></li>
-        <li><a href="#">Rent Car</a></li>
-        <li><a href="#">Future</a></li>
-        <li><a href="#">Blog</a></li>
-      </ul>
+    <div class="footerparent">
+      <div class="footer-col logo-col">
+        <img src="src/assets/seatac_footer_logo.png" alt="Seatac Logo" />
+        <div class="iconImg">
+          <img src="src/assets/footertwi.png" alt="Twitter" />
+          <img src="src/assets/footerlind.png" alt="LinkedIn" />
+          <img src="src/assets/footerinsta.png" alt="Instagram" />
+        </div>
+      </div>
+
+      <div class="footer-col">
+        <h4>Quick Links</h4>
+        <br />
+        <ul class="links">
+          <li><a href="#">Home</a></li>
+          <li><a href="#">About Us</a></li>
+          <li><a href="#">Our Services</a></li>
+          <li><a href="#">Rent Car</a></li>
+          <li><a href="#">Future</a></li>
+          <li><a href="#">Blog</a></li>
+        </ul>
+      </div>
+
+      <div class="line"></div>
+
+      <div class="footer-col">
+        <h4>Contact Now</h4>
+        <br />
+        <p>
+          Address: Mauris ultricies tincidunt sollicitudin. Maecenas finibus
+          convallis elit, vestibulum consectetur justo ornare in.
+        </p>
+      </div>
+      <div class="line"></div>
+
+      <div class="footer-col">
+        <h4>Explore Seatac</h4>
+        <br />
+        <p>
+          Nullam condimentum condimentum orci eget auctor. Pellentesque ultrices
+          ornare massa, hendrerit dignissim mi finibus et. Praesent dictum
+          bibendum nulla.
+        </p>
+      </div>
     </div>
-
-    <div class="line"></div>
-
-    <div class="footer-col">
-      <h4>Contact Now</h4>
-      <br />
-      <p>
-        Address: Mauris ultricies tincidunt sollicitudin. Maecenas finibus
-        convallis elit, vestibulum consectetur justo ornare in.
-      </p>
-    </div>
-    <div class="line"></div>
-
-    <div class="footer-col">
-      <h4>Explore Seatac</h4>
-      <br />
-      <p>
-        Nullam condimentum condimentum orci eget auctor. Pellentesque ultrices
-        ornare massa, hendrerit dignissim mi finibus et. Praesent dictum
-        bibendum nulla.
-      </p>
-    </div>
-  </div>
-  <script type="module" src="/src/js/home.js"></script>
-  <script type="module" src="main.js"></script>
-  <script src="/car_rental_project/src/header.js"></script>
-  <script src="https://kit.fontawesome.com/088be698bc.js" crossorigin="anonymous"></script>
-</body>
-
+    <script type="module" src="/src/js/home.js"></script>
+    <script type="module" src="main.js"></script>
+    <script src="/car_rental_project/src/header.js"></script>
+    <script
+      src="https://kit.fontawesome.com/088be698bc.js"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
