change in ocassion section

--- a/index.html
+++ b/index.html
@@ -84,31 +84,39 @@
     </div>
   </div>
 
-  <div class="occasion">
-    <div class="Occasionfirst">
-      <img src="src/assets/occasionfirst.png.jpeg" alt="" />
-    </div>
 
-    <div class="OccasionSecond">
-      <div class="destinationHeading">
-        <span class="font-medium">RENT CARS FOR </span>
-        <h2 class="font-extrabold">ANY OCASSION</h2>
+  <!-- occasion -->
+  <div class="bg-gray-100  px-24  py-20">
+    <div class=" h-[600px] lg:h-[600px] flex ">
+      <div class="firstOccasion ">
+        <img src="/src/assets/occasionfirst.png.jpeg" alt="">
+
       </div>
-      <div class="OccasionSecondtext">
-        Donec in libero pellentesque mauris blandit aliquet in ut turpis.
-        Vestibulum ut purus at velit finibus hendrerit. Mauris venenatis,
-        ligula vitae sollicitudin commodo, urna risus luctus ligula, in congue
-        mi dolor a tortor. Cras rhoncus molestie placerat. Maecenas faucibus
-        justo elit, varius aliquam turpis congue et. Donec eget velit eu nisi
-        sagittis mollis. Praesent fringilla nibh nibh, eget ultrices purus
-        semper eget. Suspendisse aliquam massa arcu, vitae mattis orci porta
-        vitae. Cras gravida mi ac quam venenatis egestas. Maecenas mattis
-        maximus nunc, id laoreet neque facilisis vitae. Ut lobortis purus
-        ultrices, consectetur magna vel, bibendum enim. 
+      <div class="secondOccasion mx-auto basis-1/2 py-16 ">
+        <div class="flex text-gray-700 font-seatac font-poppins items-center text-3xl relative">
+         RENT CARS FOR 
+        </div>
+
+        <div class="font-seatac text-[44px] font-bold text-emerald-500 leading-[56px]">
+          ANY OCCASION </div>
+          <div class="font-seatac text-base font-normal">Donec in libero pellentesque mauris blandit aliquet in ut turpis. Vestibulum ut purus at velit finibus hendrerit. Mauris venenatis, ligula vitae sollicitudin commodo, urna risus luctus ligula, in congue mi dolor a tortor. 
+
+            Cras rhoncus molestie placerat. Maecenas faucibus justo elit, varius aliquam turpis congue et. Donec eget velit eu nisi sagittis mollis. Praesent fringilla nibh nibh, eget ultrices purus semper eget. Suspendisse aliquam massa arcu, vitae mattis orci porta vitae. Cras gravida mi ac quam venenatis egestas. Maecenas mattis maximus nunc, id laoreet neque facilisis vitae. Ut lobortis purus ultrices, consectetur magna vel, bibendum enim. </div>
+        <div class="flex gap-1 py-5 "> <button class="w-44">Explore cars</button>
+        </div>
+
+        
+
+        
       </div>
-      <img class="Occasionbutton" src="src/assets/Occasionbutton.png.jpeg" alt="" />
+
+
+
     </div>
   </div>
+  
+
+
 
   <div class="Destination">
     <div class="destinationHeading">
