edit some in footer section

--- a/index.html
+++ b/index.html
@@ -269,6 +269,9 @@
         </p>
       </div>
     </div>
+    <div class="copyright-text">
+      <p>Copyright © 2024 Seatac Rental. All rights reserved.</p>
+    </div>
     <script type="module" src="/src/js/home.js"></script>
     <script type="module" src="main.js"></script>
     <script src="/car_rental_project/src/header.js"></script>
