UI changes are made

--- a/index.html
+++ b/index.html
@@ -17,8 +17,10 @@
 
     <!-- home page langing page 1 -->
     <div class="py-8 bg-[url('/src/assets/homebbgfinal.png')] bg-cover px-40">
-      <div class="relative h-[580px]">
-        <div class="w-1/2 h-full flex flex-col justify-center gap-3">
+      <div class="relative flex w-full justify-end">
+        <div
+          class="absolute left-0 w-1/2 h-full flex flex-col justify-center gap-3"
+        >
           <div
             class="flex text-gray-700 font-seatac font-poppins items-center text-2xl relative"
           >
@@ -45,13 +47,11 @@
             <img src="/src/assets/play-icon.png" alt="playicon" />
           </div>
         </div>
-        <img
-          class="w-3/4 absolute -right-16 top-1/2 -translate-y-1/2"
-          src="src/assets/redCar.png"
-          alt=""
-        />
+        <div class="w-[70%] relative flex pl-4 pt-6">
+          <img class="w-full" src="src/assets/redCar.png" alt="" />
+        </div>
         <div
-          class="absolute bottom-12 w-4/5 left-1/2 -translate-x-1/2"
+          class="absolute bottom-[14%] w-4/5 left-1/2 -translate-x-1/2"
           id="search-bar"
         ></div>
       </div>
