--- a/src/carscheckout/index.html
+++ b/src/carscheckout/index.html
@@ -33,26 +33,23 @@
         <div class=" grid-item left-section grid-item-span">
            <h2 class="heading">BMW I3 2018</h2>
            <p>EXTENDED RANGE</p>
-          <div class="five-star"><h2>5.0</h2>
-            <div class="star"><img src="..\assets\star (4) 1.png" alt="">
-            </div>
-            <p class="trips">(3 TRIPS)</p>
-          </div>
           <div class="grid-main">
           <div class="grid1 grid-elements">
-            <img src="..\assets\fuel 1.png" alt="">
-            <p>36 MPG</p>
+            <img src="..\assets\battery 1.png" alt="">
+            <p>ELECTRIC</p>
           </div>
           <div class="grid2 grid-elements">
-            <img src="..\assets\filling 1.png" alt="">
-            <p>GAS</p></div>
+            <img src="..\assets\car-door 1 (1).png" alt="">
+            <p>5 DOORS</p></div>
           <div class="grid3 grid-elements">
-            <img src="..\assets\car-door 1.png" alt="">
-            <p>4 doors</p></div>
-          <div class="grid4 grid-elements">
-              <img src="..\assets\car-chair 1.png" alt="">
-              <p>5 seats</p>
-            </div>
+            <img src="../assets/car-seat 1.png" alt="">
+            <p>4 SEATS</p></div>
+        </div>
+        <div class="overview">
+          <div class="elements">OVERVIEW</div>
+          <div class="elements">FEATURES</div>
+          <div class="elements">REVIEWS</div>
+          <div class="elements">LOCATION</div>
         </div>
         <div class="description">
           <h2>DESCRIPTION
