--- a/src/about/index.html
+++ b/src/about/index.html
@@ -1,65 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
+  </head>
 
-<body>
+  <body>
+    <seatac-img-behind-car>this</seatac-img-behind-car>
     <div id="aboutherosection" class="flex h-svh">
-        <div  class="aboutcarbox w-1/2">
-            <div class="aboutsearchbar">
-                searchbar
+      <div class="aboutcarbox w-1/2">
+        <div class="aboutsearchbar">searchbar</div>
+        <div class="aboutplainbox">
+          <div class="bg-emerald-500 h-[541px] w-[436px]">
+            <div class="aboutcarbg">
+              <img src="/assets/abouthomebg.png" alt="homebaground.img" />
+              <div class="absolute top-0">
+                <img src="/assets/abouthomecar.png" alt="carimig" />
+              </div>
             </div>
-            <div class="aboutplainbox ">
-            <div class="bg-emerald-500 h-[541px] w-[436px] "><div class="aboutcarbg ">
-                <img src="/assets/abouthomebg.png" alt="homebaground.img">
-                <div class="absolute top-0">
-                    <img src="/assets/abouthomecar.png" alt="carimig">
-
-                </div></div>
-                
-                </div>
-            </div>
-
+          </div>
         </div>
-        <div class="abouttextbox w-1/2 bg-slate-500">
-            <div class="textboxheading">
-                <h5>About</h5>
-                <h5>Seatac rental</h5>
-            </div>
-            <div class="textboxpara">
-                <p>Donec quis arcu egestas, aliquam sem sed,
-                    pharetra urna. Sed venenatis erat eu nulla
-                    finibus interdum. Fusce non lectus magna.
-                    Maecenas lacus ipsum, blandit vitae nunc id,
-                    fringilla tempus neque. Integer vitae velit
-                    libero. Cras euismod tempor lectus,
-                    vel tempor turpis consectetur varius.
-                    Etiam faucibus metus vitae elit rutrum tempus.
-
-                    Proin sit amet accumsan eros. Orci varius natoque
-                    penatibus et magnis dis parturient montes,
-                    nascetur ridiculus mus. In eros urna, varius
-                    in ex quis, aliquet faucibus ante. Pellentesque
-                    maximus, ipsum eu varius dignissim, ex diam
-                    ullamcorper mauris, vel porttitor elit dolor id
-                    est. Nullam vitae enim lorem. Integer blandit
-                    aliquet risus at aliquam. Phasellus vitae pulvinar urna. Integer quis nibh elit.
-
-                    Nunc pharetra, quam eget mattis luctus, odio tortor
-                    feugiat leo, at pretium orci tellus non libero. 
-                </p>
-            </div>
-
-
-
+      </div>
+      <div class="abouttextbox w-1/2 bg-slate-500">
+        <div class="textboxheading">
+          <h5>About</h5>
+          <h5>Seatac rental</h5>
         </div>
+        <div class="textboxpara">
+          <p>
+            Donec quis arcu egestas, aliquam sem sed, pharetra urna. Sed
+            venenatis erat eu nulla finibus interdum. Fusce non lectus magna.
+            Maecenas lacus ipsum, blandit vitae nunc id, fringilla tempus neque.
+            Integer vitae velit libero. Cras euismod tempor lectus, vel tempor
+            turpis consectetur varius. Etiam faucibus metus vitae elit rutrum
+            tempus. Proin sit amet accumsan eros. Orci varius natoque penatibus
+            et magnis dis parturient montes, nascetur ridiculus mus. In eros
+            urna, varius in ex quis, aliquet faucibus ante. Pellentesque
+            maximus, ipsum eu varius dignissim, ex diam ullamcorper mauris, vel
+            porttitor elit dolor id est. Nullam vitae enim lorem. Integer
+            blandit aliquet risus at aliquam. Phasellus vitae pulvinar urna.
+            Integer quis nibh elit. Nunc pharetra, quam eget mattis luctus, odio
+            tortor feugiat leo, at pretium orci tellus non libero. 
+          </p>
+        </div>
+      </div>
     </div>
 
     <script src="https://cdn.tailwindcss.com"></script>
-</body>
-
+  </body>
 </html>
