Create the seatac rental design image component independent any thing

--- a/index.html
+++ b/index.html
@@ -100,7 +100,11 @@
     </div>
 
     <div class="px-40 flex gap-4 pb-8 pt-20">
-      <seatac-img-behind-car class="w-3/5 my-20"></seatac-img-behind-car>
+      <seatac-img-behind-car
+        class="w-3/5 my-20"
+        data-background="src/assets/any_occassion_car_model_background.png"
+        data-car="src/assets/any_occassion_car_model.png"
+      ></seatac-img-behind-car>
       <!-- <div class="w-3/5 h-full my-20">
         <div class="relative flex flex-col justify-center items-center">
           <div
