changing in some checkout page

--- a/src/carscheckout/index.html
+++ b/src/carscheckout/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="../../main.css">
-    <link rel="stylesheet" href="../additionalcss/cardetail.css" />
+    <link rel="stylesheet" href="..\carscheckout\style.css" />
 
   </head>
   <body>
@@ -51,36 +51,81 @@
           <div class="elements">REVIEWS</div>
           <div class="elements">LOCATION</div>
         </div>
-        <div class="description">
-          <h2>DESCRIPTION
+
+        <div class="grid-main">
+          <div class="grid1 grid-elements">
+            <img src="..\assets\energy 1.png" alt="">
+            <p>ELECTRIC</p>
+          </div>
+          <div class="grid3 grid-elements">
+            <img src="..\assets\car-door 1 (1).png" alt="">
+            <p>5 DOORS</p></div>
+          <div class="grid4 grid-elements">
+              <img src="../assets/car-seat 1.png" alt="">
+              <p>5 SEATS</p>
+            </div>
+            <div class="grid2 grid-elements"></div>
+        </div>
+
+        <div class="HOSTED-BY">
+          <h2>HOSTED BY
         </h2>
       </div>
-      <div class="para"><p>Donec in libero pellentesque mauris blandit aliquet in ut turpis. Vestibulum ut purus at velit finibus hendrerit. Mauris venenatis, ligula vitae sollicitudin commodo, urna risus luctus ligula, in congue mi dolor a tortor.
-        <br>
-        <br>
- Cras rhoncus molestie placerat. Maecenas faucibus justo elit, varius aliquam turpis congue et. Donec eget velit eu nisi sagittis mollis. Praesent fringilla nibh nibh, eget ultrices purus semper eget. Suspendisse aliquam massa arcu, vitae mattis orci porta vitae. Cras gravida mi ac quam venenatis egestas. Maecenas mattis maximus nunc, id laoreet neque facilisis vitae. Ut lobortis purus ultrices, consectetur magna vel, bibendum enim. </p>
+<div class="user-details">
+  <div class="person-img">
+<img src="..\assets\female-portrait-brunette-woman-portrait-autumn-park-wearing-olive-dress.png" alt="">
+  </div>
+  <div class="name-heading">
+<h2>Tomasz</h2>
+<p>Joined Aug 2021</p>
+  </div>
+</div>
+
+<div class="HOSTED-BY">
+  <h2>DESCRIPTION
+</h2>
+</div>
+
+
+      <div class="para">
+        <img src="..\assets\search (1) 1.png" alt="">
+        <p>Looking for a trip over to London? Planning a business trip? 
+          Fancy going to the seaside with your loved ones?
+        </p>
+      </div>
+
+      <div class="para-2">
+        <img src="..\assets\greetings 1.png" alt="">
+        <p>Discover the thrill of driving my well-loved BMW i3 REx-an eco-friendly and
+        </p>
       </div>
       <div class="read-more">
-        <button>MORE</button>
+        <button><p>MORE</p></button>
       </div>
+      
       <div class="description">
         <h2>FEATURES
       </h2>
     </div>
     <div class="grid-main">
       <div class="grid1 grid-elements">
-        <img src="..\assets\21 1.png" alt="">
-        <p>Must be 21+ to book</p>
+        <img src="..\assets\Group 15.png" alt="">
+        <p>Must be 25+ to book</p>
       </div>
       <div class="grid2 grid-elements"></div>
       <div class="grid3 grid-elements">
-        <img src="..\assets\automatic-transmission 1.png" alt="">
+        <img src="..\assets\Group 17.png" alt="">
         <p>Automatic transmission</p></div>
       <div class="grid4 grid-elements">
-          <img src="..\assets\play (1) 1.png" alt="">
+          <img src="..\assets\Group 16.png" alt="">
           <p>Android Auto</p>
         </div>
     </div>
+
+    <div class="read-more-one">
+      <button><p>MORE</p></button>
+    </div>
+
     <div class="description">
       <h2>RATINGS AND REVIEWS
     </h2>
