write the code of about page

--- a/index.html
+++ b/index.html
@@ -1,61 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
 
-  <body class="bg-[#F5F5F5]">
-    <div class="w-full absolute h-20 z-50" id="header"></div>
+<body class="bg-[#F5F5F5]">
+  <div class="w-full absolute h-20 z-50" id="header"></div>
 
-    <!-- home page langing page 1 -->
-    <div
-      class="bg-[url('/src/assets/homebbgfinal.png')] bg-cover bg-right px-40"
-    >
-      <div class="relative flex w-full justify-end">
-        <div
-          class="absolute left-0 w-[45%] h-[90%] flex flex-col justify-center"
-        >
-          <div
-            class="flex text-gray-700 font-seatac font-poppins items-center text-2xl relative"
-          >
-            Need to Rent
-            <img
-              class="absolute right-0 top-1/2 w-[80%] -translate-y-1/2"
-              src="./src/assets/homefadecar.png"
-              alt=""
-            />
-          </div>
-
-          <div class="heading-primary">
-            Luxury Car? <br />
-            Send A Request
-          </div>
-          <div class="font-poppins text-base font-normal w-3/4">
-            Pellentesque habitant morbi tristique senectus et netus et
-            malesuada.
-          </div>
-          <div class="py-4 flex gap-1">
-            <div class="setac-primary-button">BECOME A HOST</div>
-          </div>
+  <!-- home page langing page 1 -->
+  <div class="bg-[url('/src/assets/homebbgfinal.png')] bg-cover bg-right px-40">
+    <div class="relative flex w-full justify-end">
+      <div class="absolute left-0 w-[45%] h-[90%] flex flex-col justify-center">
+        <div class="flex text-gray-700 font-seatac font-poppins items-center text-2xl relative">
+          Need to Rent
+          <img class="absolute right-0 top-1/2 w-[80%] -translate-y-1/2" src="./src/assets/homefadecar.png" alt="" />
         </div>
 
-        <div class="w-3/4 relative flex justify-center py-12">
-          <img
-            class="w-full mb-20 object-cover z-[19] scale-95 translate-x-[5%]"
-            src="src/assets/home-page-main-bnr.png"
-            alt=""
-          />
+        <div class="heading-primary">
+          Luxury Car? <br />
+          Send A Request
         </div>
-        <div
-          class="absolute z-[9] w-[65vw] top-3/4 left-1/2 -translate-x-1/2"
-          id="search-bar"
-        ></div>
+        <div class="font-poppins text-base font-normal w-3/4">
+          Pellentesque habitant morbi tristique senectus et netus et
+          malesuada.
+        </div>
+        <div class="py-4 flex gap-1">
+          <div class="setac-primary-button">BECOME A HOST</div>
+        </div>
       </div>
-      <img class="absolute -right-16 scale-90 mt-8 top-1/2 -translate-y-1/2" src="src/assets/redCar.png" alt="" />
+
+      <div class="w-3/4 relative flex justify-center py-12">
+        <img class="w-full mb-20 object-cover z-[19] scale-95 translate-x-[5%]" src="src/assets/home-page-main-bnr.png"
+          alt="" />
+      </div>
+      <div class="absolute z-[9] w-[65vw] top-3/4 left-1/2 -translate-x-1/2" id="search-bar"></div>
     </div>
+    <img class="absolute -right-16 scale-90 mt-8 top-1/2 -translate-y-1/2" src="src/assets/redCar.png" alt="" />
+  </div>
   </div>
 
 
 
   <div class="" id="search-bar">
-    
+
   </div>
   </div>
   </div>
@@ -93,11 +77,8 @@
     </div>
 
     <div class="px-40 flex gap-4 pb-8 pt-20">
-      <seatac-img-behind-car
-        class="w-3/5 my-20"
-        data-background="src/assets/any_occassion_car_model_background.png"
-        data-car="src/assets/any_occassion_car_model.png"
-      ></seatac-img-behind-car>
+      <seatac-img-behind-car class="w-3/5 my-20" data-background="src/assets/any_occassion_car_model_background.png"
+        data-car="src/assets/any_occassion_car_model.png"></seatac-img-behind-car>
       <!-- <div class="w-3/5 h-full my-20">
         <div class="relative flex flex-col justify-center items-center">
           <div
@@ -194,7 +175,9 @@
 
         <div class="font-seatac text-[44px] font-bold text-emerald-500 leading-[56px]">
           ANY OCCASION </div>
-          <div class="font-seatac text-base font-normal">Donec in libero pellentesque mauris blandit aliquet in ut turpis. Vestibulum ut purus at velit finibus hendrerit. Mauris venenatis, ligula vitae sollicitudin commodo, urna risus luctus ligula, in congue mi dolor a tortor. 
+        <div class="font-seatac text-base font-normal">Donec in libero pellentesque mauris blandit aliquet in ut turpis.
+          Vestibulum ut purus at velit finibus hendrerit. Mauris venenatis, ligula vitae sollicitudin commodo, urna
+          risus luctus ligula, in congue mi dolor a tortor.
 
           <div class="lower-heading">
             <h2>Duis rutrum pharetra mauris.</h2>
@@ -205,19 +188,19 @@
           </div>
         </div>
 
-        
 
-          <div class="setac-primary-button">
-            <button>READ MORE</button>
-          </div>
+
+        <div class="setac-primary-button">
+          <button>READ MORE</button>
         </div>
       </div>
-
-
-
     </div>
+
+
+
   </div>
-  
+  </div>
+
 
 
 
@@ -345,5 +328,6 @@
     <script src="createCustomElements.js"></script>
     <script type="module" src="/src/js/home.js"></script>
     <script type="module" src="main.js"></script>
-  </body>
+</body>
+
 </html>
