Adding the fucntionality for building the project

--- a/index.html
+++ b/index.html
@@ -242,8 +242,8 @@
         <img src="src/assets/css 1.png" alt="" />
       </div>
     </div>
-
-    <div class="footerparent">
+    <div id="footer"></div>
+    <div class="footerparent hidden">
       <div class="footer-col logo-col">
         <img src="src/assets/seatac_footer_logo.png" alt="Seatac Logo" />
         <div class="iconImg">
