--- a/index.html
+++ b/index.html
@@ -17,18 +17,19 @@
 
     <!-- home page langing page 1 -->
     <div
-      class="bg-[url('/src/assets/homebbgfinal.png')] bg-cover bg-right px-40"
+      class="flex flex-col justify-center items-center bg-[url('/src/assets/homebbgfinal.png')] bg-cover bg-[57%_center] md:bg-[right_20%] px-5 pt-24 pb-8 md:px-12 lg:px-40 md:h-auto md:pb-24"
     >
-      <div class="relative flex w-full justify-end">
+      <div
+        class="w-full relative flex flex-col md:flex-row justify-between md:justify-end"
+      >
         <div
-          class="absolute left-0 w-[45%] h-[90%] flex flex-col justify-center"
+          id="bnr-text"
+          class="z-[29] flex flex-col justify-center md:w-2/5 md:absolute md:left-0 md:top-1/2 md:-translate-y-1/2"
         >
-          <div
-            class="flex text-gray-700 font-seatac font-poppins items-center text-2xl relative"
-          >
+          <div class="heading-secondary relative">
             Need to Rent
             <img
-              class="absolute right-0 top-1/2 w-[80%] -translate-y-1/2"
+              class="hidden md:flex absolute -right-10 top-1/2 w-[80%] -translate-y-1/2 md:translate-x-[5%]"
               src="./src/assets/homefadecar.png"
               alt=""
             />
@@ -38,7 +39,7 @@
             Luxury Car? <br />
             Send A Request
           </div>
-          <div class="font-poppins text-base font-normal w-3/4">
+          <div class="hidden font-poppins text-base font-normal w-3/4 md:block">
             Pellentesque habitant morbi tristique senectus et netus et
             malesuada.
           </div>
@@ -47,18 +48,21 @@
           </div>
         </div>
 
-        <div class="w-3/4 relative flex justify-center py-12">
+        <div
+          class="w-full md:w-3/4 relative flex z-[11] justify-center md:translate-y-0"
+          id="bnr-img"
+        >
           <img
-            class="w-full mb-20 object-cover z-[19] scale-95 translate-x-[5%]"
+            class="w-full object-cover scale-95 z-[19] md:translate-x-[5%]"
             src="src/assets/home-page-main-bnr.png"
             alt=""
           />
         </div>
-        <div
-          class="absolute z-[9] w-[65vw] top-3/4 left-1/2 -translate-x-1/2"
-          id="search-bar"
-        ></div>
       </div>
+      <div
+        class="w-full -translate-y-[25%] h-auto md:-translate-y-[30%] lg:w-[90%]"
+        id="search-bar"
+      ></div>
     </div>
 
     <!-- home page langing page 1 -->
@@ -99,29 +103,11 @@
       </div>
     </div>
 
-    <div class="px-40 flex gap-4 pb-8 pt-20">
+    <div class="px-5 lg:px-40 flex flex-col gap-4 pb-8 pt-20">
       <seatac-img-behind-car
-        class="w-3/5 my-20"
-        data-background="src/assets/any_occassion_car_model_background.png"
-        data-car="src/assets/any_occassion_car_model.png"
+        class="w-full outline md:w-3/5 my-20"
+        id="design-car-rental"
       ></seatac-img-behind-car>
-      <!-- <div class="w-3/5 h-full my-20">
-        <div class="relative flex flex-col justify-center items-center">
-          <div
-            class="absolute h-[400px] left-6 -top-[8%] rounded-tl-[60px] rounded-tr-[60px] w-3/5 bg-primary"
-          ></div>
-          <img
-            class="scale-[85%]"
-            src="src/assets/any_occassion_car_model_background.png"
-            alt=""
-          />
-          <img
-            class="absolute -bottom-[10%] scale-[1.1]"
-            src="src/assets/any_occassion_car_model.png"
-            alt=""
-          />
-        </div>
-      </div> -->
 
       <div class="w-2/5 my-20 flex flex-col gap-2 justify-center">
         <div class="">
@@ -169,6 +155,7 @@
         </div>
       </div>
     </div>
+
     <div class="daydreams-section">
       <div>
         <div class="top-para">
@@ -228,6 +215,7 @@
         <img src="src/assets/sport_car_107_15701 1.png" alt="" />
       </div>
     </div>
+
     <div class="section-5">
       <div class="recent-rental-reviews">
         <div class="top-para">
@@ -242,52 +230,9 @@
         <img src="src/assets/css 1.png" alt="" />
       </div>
     </div>
+
     <div id="footer"></div>
-    <div class="footerparent hidden">
-      <div class="footer-col logo-col">
-        <img src="src/assets/seatac_footer_logo.png" alt="Seatac Logo" />
-        <div class="iconImg">
-          <img src="src/assets/footertwi.png" alt="Twitter" />
-          <img src="src/assets/footerlind.png" alt="LinkedIn" />
-          <img src="src/assets/footerinsta.png" alt="Instagram" />
-        </div>
-      </div>
 
-      <div class="footer-col">
-        <h4>Quick Links</h4>
-        <br />
-        <ul class="links">
-          <li><a href="#">Home</a></li>
-          <li><a href="#">About Us</a></li>
-          <li><a href="#">Our Services</a></li>
-          <li><a href="#">Rent Car</a></li>
-          <li><a href="#">Future</a></li>
-          <li><a href="#">Blog</a></li>
-        </ul>
-      </div>
-
-      <div class="line"></div>
-
-      <div class="footer-col">
-        <h4>Contact Now</h4>
-        <br />
-        <p>
-          Address: Mauris ultricies tincidunt sollicitudin. Maecenas finibus
-          convallis elit, vestibulum consectetur justo ornare in.
-        </p>
-      </div>
-      <div class="line"></div>
-
-      <div class="footer-col">
-        <h4>Explore Seatac</h4>
-        <br />
-        <p>
-          Nullam condimentum condimentum orci eget auctor. Pellentesque ultrices
-          ornare massa, hendrerit dignissim mi finibus et. Praesent dictum
-          bibendum nulla.
-        </p>
-      </div>
-    </div>
     <script src="createCustomElements.js"></script>
     <script type="module" src="/src/js/home.js"></script>
     <script type="module" src="main.js"></script>
